[project]
name = "raybin"
version = "0.1.0"
description = "Dispatch binaries workloads over ray"
authors = [
    { name = "JakkuSakura", email = "qjk2001@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "ray[all]>=2.42.0,<3.0",
    "polars>=1.14.0,<2.0",
    "clickhouse-connect>=0.8.6,<0.9",
    "streamlit>=1.40.1,<1.41",
    "plotly>=5.24.1,<5.25",
    "whenever>=0.6.13,<0.7",
    "beartype>=0.19.0,<0.20",
    "psutil>=6.1.0,<6.2",
    "streamlit-datalist",
    "jupyter",
    "jupyterlab>=4.3.5",
    "pip>=25.0",
    "ipywidgets>=7.7.2",
    "fastapi[standard]>=0.115",
    "typer>=0.15.1"
]
